# automate-robot-bvp

./: .gitignore  README.md
ebot_controller/: package.xml
ebot_controller/scripts/: check_wall_perception.py  controller.py
ebot_description/launch/: ebot_spawn.launch  nav_test.launch  task1.launch  task2.launch  (+3 more)
ebot_handler/: CMakeLists.txt  package.xml
ebot_nav/: CMakeLists.txt  package.xml
ebot_perception/: .setup_assistant  CMakeLists.txt  package.xml
ebot_perception/config/: ebot.srdf  fake_controllers.yaml  kinematics.yaml  obj_pose.yaml  ompl_planning.yaml  ros_controllers.yaml  trajectory_control.yaml
ebot_perception/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  ebot_bringup.launch  ebot_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  find_object_2d.launch  find_object_3d.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  octomap.launch  octomap.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ebot_perception/objects/: .directory
ebot_perception/objects/GLASS/: .directory
ebot_perception/scripts/: arm_manipulation.py  classes.txt  launch_perception_stack.sh  perception_pipeline.py  perception_yolo.py  perception_yolo_new.py  perception_yolo_test.py  yolo.py  yolo_oops.py
ur5_config/: .setup_assistant  CMakeLists.txt  package.xml
(+90 files in other folders)
